# rust-base-service

./: .envCopy  API_DOCUMENTATION.md  Cargo.toml  README.md  README2.md  dokerfile
api/: Cargo.toml
api/src/: lib.rs  routes.rs  service.rs  state.rs
api/src/handlers/: auth.rs  me.rs
api/src/middleware/: auth.rs  logging.rs
auth/: Cargo.toml
auth/src/: error.rs  lib.rs  password.rs  service.rs
common/: Cargo.toml  auth.rs
common/src/: config.rs  error.rs  jwt.rs  lib.rs  models.rs  utils.rs
database/: Cargo.toml
database/migrations/: 00001_create_users_table.sql
database/src/: error.rs  lib.rs  migrations.rs  pool.rs
database/src/repository/: mod.rs
docs/: dependency_management.md  observability.md  service_template.md
jwt/: Cargo.toml
jwt/src/: lib.rs
models/: Cargo.toml
models/src/: lib.rs
repository/: Cargo.toml
repository/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml  lib.rs  user.rs
