[workspace]
members = [
    "api",
    "auth",
    "database",
    "common",
    "server",
    "shared",
]

[workspace.dependencies]
tokio = { version = "1.34", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
dotenv = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
jsonwebtoken = "9.1"
argon2 = "0.5"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
validator = { version = "0.16", features = ["derive"] }
