[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
validator.workspace = true
uuid.workspace = true
jsonwebtoken.workspace = true

# Dependencias internas

database = { path = "../database" }
common = { path = "../common" }
shared = { path = "../shared" }