[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
serde.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
sqlx.workspace = true
async-trait = "0.1.77"
uuid.workspace = true
serde_json.workspace = true
tokio.workspace = true
# Dependencias internas
common = { path = "../common" }
shared = { path = "../shared" }
repository = { path = "../repository" }
api = { path = "../api" }
