[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
serde.workspace = true
tracing.workspace = true
async-trait.workspace = true
# Dependencias internas
common = { path = "../common" }
shared = { path = "../shared" }
