[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
api = { path = "../api" }
auth = { path = "../auth" }
database = { path = "../database" }
common = { path = "../common" }
