[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
anyhow.workspace = true
validator.workspace = true
serde_json.workspace = true
chrono.workspace = true
jwt = { path = "../jwt" }
bcrypt = "0.13"
uuid.workspace = true
tokio.workspace = true
axum.workspace = true
serde.workspace = true
thiserror.workspace = true
jsonwebtoken.workspace = true
